# squeezy

./: .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  install.sh  squeezy-assessment.md
benchmarks/squeezy-graph-bench/: Cargo.toml
benchmarks/squeezy-graph-bench/src/: accuracy.rs  cli.rs  corpus.rs  execution.rs  execution_tests.rs  gates.rs  harness.rs  main.rs  main_tests.rs  mixed.rs  mixed_tests.rs  oracles.rs  oracles_tests.rs  report.rs  runner.rs  runner_tests.rs  summary.rs  util.rs
crates/squeezy-agent/: Cargo.toml
crates/squeezy-agent/src/: ai_reviewer.rs  ai_reviewer_tests.rs  cancel.rs  context_compaction.rs  context_compaction_tests.rs  cost_broker.rs  cost_broker_tests.rs  dispatch.rs  dispatch_tests.rs  exploration_compiler.rs  exploration_compiler_tests.rs  export_html.rs  export_html_styles.css  export_html_tests.rs  lib.rs  lib_tests.rs  memory_extraction.rs  memory_extraction_tests.rs  micro_compaction.rs  micro_compaction_tests.rs  permission_persist.rs  permission_persist_tests.rs  plan_mode.rs  plan_mode_tests.rs  roles.rs  roles_tests.rs  subagent_catalog.rs  subagent_catalog_tests.rs  turn_phases.rs  turn_router.rs  turn_router_tests.rs
crates/squeezy-agent/tests/: routing.rs  tool_loop.rs
crates/squeezy-cli/: Cargo.toml  build.rs
crates/squeezy-cli/src/: auth.rs  auth_tests.rs  config.rs  config_browse.rs  config_browse_tests.rs  doctor.rs  doctor_tests.rs  main.rs  main_tests.rs  print_mode.rs  print_mode_tests.rs  providers.rs  providers_tests.rs  update.rs  update_tests.rs
crates/squeezy-core/: Cargo.toml
crates/squeezy-core/src/: config_explain.rs  config_schema.rs  config_schema_tests.rs  hardening.rs  hardening_tests.rs  lib.rs  lib_tests.rs  provider_metadata.rs  settings_writer.rs  settings_writer_tests.rs  startup_trace.rs
crates/squeezy-eval/: Cargo.toml
crates/squeezy-eval/examples/: repro_reasoning_expand.rs
crates/squeezy-eval/src/: capture.rs  ci.rs  ci_tests.rs  diff.rs  driver.rs  driver_tests.rs  findings.rs  findings_tests.rs  frames.rs  frames_tests.rs  lib.rs  live.rs  live_tests.rs  main.rs  mock_provider.rs  scenario.rs  scenario_tests.rs  tickets.rs  tickets_tests.rs  triage.rs  triage_tests.rs  tui_capture.rs  tui_capture_tests.rs  view.rs  view_tests.rs  workspace.rs  workspace_tests.rs
crates/squeezy-graph/: Cargo.toml
crates/squeezy-graph/examples/: graph_build_timing.rs
crates/squeezy-graph/src/: affected.rs  affected_tests.rs  backend.rs  cache.rs  cross_file.rs  index.rs  languages.rs  lib.rs  lib_tests.rs  project_facts.rs  query.rs  references.rs  refresh.rs  resolution.rs  resolver_cache.rs  watcher.rs  watcher_tests.rs
crates/squeezy-graph/tests/: policy_docs.rs  registry.rs  semantic_pipeline.rs
crates/squeezy-harness/: Cargo.toml
crates/squeezy-harness/src/: lib.rs  lib_tests.rs  main.rs
crates/squeezy-hooks/: Cargo.toml
crates/squeezy-hooks/src/: lib.rs  lib_tests.rs
crates/squeezy-llm/: Cargo.toml
crates/squeezy-llm/src/: anthropic.rs  anthropic_betas.rs  anthropic_betas_tests.rs  anthropic_error.rs  anthropic_error_tests.rs  anthropic_tests.rs  bedrock.rs  bedrock_tests.rs  cache_policy.rs  cache_policy_tests.rs  compatible.rs  compatible_tests.rs  contribution.rs  contribution_tests.rs  credentials.rs  credentials_tests.rs  faux.rs  faux_tests.rs  google.rs  google_tests.rs  keychain.rs  keychain_tests.rs  lib.rs  lib_tests.rs  limits.rs  limits_tests.rs  lmstudio.rs  lmstudio_tests.rs  model_discovery.rs  model_discovery_tests.rs  models.json  models_dev.rs  models_dev_tests.rs  oauth.rs  ollama.rs  ollama_tests.rs  openai.rs  openai_prompt_cache.rs  openai_prompt_cache_tests.rs  openai_tests.rs  (+15 more)
crates/squeezy-llm/tests/: anthropic_costly.rs  anthropic_stream_retry.rs  azure_openai_costly.rs  bedrock_costly.rs  compatible_finish_without_done.rs  compatible_mock_matrix.rs  deepseek_costly.rs  google_costly.rs  groq_costly.rs  lmstudio_mock.rs  ollama_pull_mock.rs  ollama_smoke.rs  openai_costly.rs  openrouter_costly.rs  portkey_costly.rs  preset_mistral_mock.rs  sse_fixture_replay.rs  vercel_costly.rs  vertex_costly.rs  xai_costly.rs
crates/squeezy-mcp/: Cargo.toml
crates/squeezy-mcp/src/: elicitation.rs  lib.rs  lib_tests.rs  palette.rs  resources.rs  schema_compaction.rs  schema_compaction_tests.rs  sse.rs  sse_tests.rs  transport.rs
crates/squeezy-parse/: Cargo.toml
crates/squeezy-parse/src/: backend.rs  languages.rs  lib.rs  lib_tests.rs  registration.rs
crates/squeezy-parse/tests/: registry.rs
crates/squeezy-skills/: Cargo.toml  build.rs
crates/squeezy-skills/external-docs/: AGENT_APPROACH.md  APPROVAL_POLICY.md  CHECKPOINTS.md  CONFIGURATION.md  FEEDBACK.md  HOOKS.md  INSTALL.md  LANGUAGES.md  MCP_AND_WEB.md  MEMORY.md  PLATFORMS.md  PROMPT_TEMPLATES.md  PROVIDERS.md  README.md  REPO_PROFILE.md  SESSIONS.md  SHELL_SANDBOXING.md  SKILLS.md  TELEMETRY.md  TOOLS.md  TROUBLESHOOTING.md
crates/squeezy-skills/src/: catalog.rs  catalog_tests.rs  frontmatter.rs  frontmatter_tests.rs  help.rs  help_tests.rs  hooks.rs  hooks_tests.rs  implicit.rs  implicit_tests.rs  installer.rs  installer_tests.rs  lib.rs  lib_tests.rs  manifest.rs  manifest_tests.rs  prompt_templates.rs  prompt_templates_tests.rs  render.rs  render_tests.rs  validation.rs  validation_tests.rs
crates/squeezy-skills/tests/: fixture_examples.rs
crates/squeezy-store/: Cargo.toml
crates/squeezy-store/src/: fs_util.rs  lib.rs  lib_tests.rs  memory.rs  memory_tests.rs  migrations.rs  migrations_tests.rs  repo_profile.rs  repo_profile_tests.rs  reports.rs  sessions.rs  sessions_cleanup.rs  sessions_replay.rs  sessions_tests.rs  sessions_writer.rs
crates/squeezy-telemetry/: Cargo.toml
crates/squeezy-telemetry/src/: lib.rs  lib_tests.rs
crates/squeezy-tools/: Cargo.toml
crates/squeezy-tools/src/: catalog.rs  checkpoint_provider.rs  checkpoints.rs  file_mutation_queue.rs  file_mutation_queue_tests.rs  file_ops.rs  ipc.rs  (+39 more)
crates/squeezy-tui/: Cargo.toml
crates/squeezy-vcs/: Cargo.toml
crates/squeezy-win-sandbox/: Cargo.toml
(+992 files in other folders)
