[workspace]
members = [
    "crates/squeezy-agent",
    "crates/squeezy-cli",
    "crates/squeezy-core",
    "crates/squeezy-eval",
    "crates/squeezy-graph",
    "crates/squeezy-harness",
    "crates/squeezy-hooks",
    "crates/squeezy-llm",
    "crates/squeezy-mcp",
    "crates/squeezy-parse",
    "crates/squeezy-rank",
    "crates/squeezy-skills",
    "crates/squeezy-store",
    "crates/squeezy-telemetry",
    "crates/squeezy-tools",
    "crates/squeezy-tui",
    "crates/squeezy-vcs",
    "crates/squeezy-workspace",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
description = "Cost-aware coding agent TUI with local semantic code navigation"
license = "Apache-2.0"
repository = "https://github.com/esqueezy/squeezy"
homepage = "https://github.com/esqueezy/squeezy"
readme = "README.md"
keywords = ["coding-agent", "tui", "semantic-search", "llm"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[workspace.dependencies]
ansi-to-tui = "8.0.1"
async-stream = "0.3"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
dirs = "6"
fs2 = "0.4"
futures-core = "0.3"
futures-util = "0.3"
getrandom = "0.4"
globset = "0.4"
http = "1"
ignore = "0.4"
libc = "0.2"
lru = "0.18"
pulldown-cmark = "0.13.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
regex = "1"
redb = "4.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "reqwest"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.11"
similar = "3"
supports-color = "3.0.2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
toml = "1.1.2"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
unicode-normalization = "0.1.25"
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "default-https-client",
    "rt-tokio",
    "credentials-process",
    "sso",
] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "default-https-client",
    "rt-tokio",
] }
aws-smithy-types = "1"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-dart = "0.2.0"
tree-sitter-go = "0.25"
tree-sitter-highlight = "0.26.9"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
# `tree-sitter-kotlin` 0.3.x on crates.io pins tree-sitter < 0.23 and is
# unmaintained. `tree-sitter-kotlin-ng` is the maintained fork
# (tree-sitter-grammars/tree-sitter-kotlin) compatible with tree-sitter 0.26+,
# published by the tree-sitter-grammars org under MIT.
tree-sitter-kotlin-ng = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-sequel = "0.3"
tree-sitter-swift = "0.7.3"
tree-sitter-toml-updated = "0.20"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
which = "8"
windows-sys = "0.61"

squeezy-agent = { path = "crates/squeezy-agent", version = "=0.1.0" }
squeezy-core = { path = "crates/squeezy-core", version = "=0.1.0" }
squeezy-graph = { path = "crates/squeezy-graph", version = "=0.1.0" }
squeezy-hooks = { path = "crates/squeezy-hooks", version = "=0.1.0" }
squeezy-llm = { path = "crates/squeezy-llm", version = "=0.1.0" }
squeezy-mcp = { path = "crates/squeezy-mcp", version = "=0.1.0" }
squeezy-parse = { path = "crates/squeezy-parse", version = "=0.1.0" }
squeezy-rank = { path = "crates/squeezy-rank", version = "=0.1.0" }
squeezy-skills = { path = "crates/squeezy-skills", version = "=0.1.0" }
squeezy-store = { path = "crates/squeezy-store", version = "=0.1.0" }
squeezy-telemetry = { path = "crates/squeezy-telemetry", version = "=0.1.0" }
squeezy-tools = { path = "crates/squeezy-tools", version = "=0.1.0" }
squeezy-tui = { path = "crates/squeezy-tui", version = "=0.1.0" }
squeezy-vcs = { path = "crates/squeezy-vcs", version = "=0.1.0" }
squeezy-workspace = { path = "crates/squeezy-workspace", version = "=0.1.0" }

[profile.release]
opt-level = 3
# Keep Cargo's default release path practical for source installs. Cargo's
# release default is 16 codegen units: enough parallelism for faster builds,
# with a small optimization tradeoff versus the dist profile's single unit.
lto = false
codegen-units = 16

[profile.dist]
inherits = "release"
# Distribution artifacts opt into whole-program optimization explicitly.
lto = true
codegen-units = 1
strip = "symbols"
