[package]
name = "squeezy-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
tokio.workspace = true
tokio-util.workspace = true
