[package]
name = "squeezy-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
squeezy-core.workspace = true
squeezy-hooks.workspace = true
squeezy-llm.workspace = true
squeezy-skills.workspace = true
squeezy-store.workspace = true
squeezy-telemetry.workspace = true
squeezy-tools.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
