[package]
name = "squeezy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "squeezy"
path = "src/main.rs"

[dependencies]
clap.workspace = true
futures-util.workspace = true
serde_json.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
squeezy-store.workspace = true
squeezy-telemetry.workspace = true
squeezy-tui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
