[package]
name = "squeezy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "squeezy"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
squeezy-agent.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
squeezy-skills.workspace = true
squeezy-store.workspace = true
squeezy-telemetry.workspace = true
squeezy-tools.workspace = true
squeezy-tui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml_edit.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
futures-core.workspace = true
futures-util.workspace = true
