[package]
name = "squeezy-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
squeezy-core.workspace = true
squeezy-parse.workspace = true
squeezy-workspace.workspace = true
