[package]
name = "squeezy-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
squeezy-core.workspace = true
squeezy-store.workspace = true
squeezy-parse.workspace = true
squeezy-workspace.workspace = true
