[package]
name = "squeezy-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
squeezy-core.workspace = true
squeezy-store.workspace = true
squeezy-parse.workspace = true
squeezy-workspace.workspace = true
# Cross-platform file-system watcher: FSEvents on macOS, inotify on
# Linux, ReadDirectoryChangesW on Windows, plus the debouncer that lets
# us batch rapid edits before invalidating the graph.
notify-debouncer-full = "0.7"
tracing = "0.1"
