[package]
name = "squeezy-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
squeezy-agent.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
squeezy-store.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true

[[bin]]
name = "squeezy-harness"
path = "src/main.rs"
