[package]
name = "squeezy-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true }
