[package]
name = "squeezy-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = []
costly-tests = []

[dependencies]
async-stream.workspace = true
aws-config.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-smithy-types.workspace = true
futures-core.workspace = true
futures-util.workspace = true
keyring.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
squeezy-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-async-persistent"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }
