[package]
name = "squeezy-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
futures-util.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
squeezy-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
