[package]
name = "squeezy-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
futures-util.workspace = true
libc.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
squeezy-core.workspace = true
squeezy-store.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
