[package]
name = "squeezy-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
squeezy-core.workspace = true
squeezy-workspace.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-typescript.workspace = true
