[package]
name = "squeezy-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
include = [
    "Cargo.toml",
    "build.rs",
    "builtin/*/SKILL.md",
    "external-docs/*.md",
    "src/**",
    "tests/artifacts/**",
    "../../README.md",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
squeezy-core.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
