[package]
name = "squeezy-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
squeezy-workspace.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tokio.workspace = true
