[package]
name = "squeezy-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
futures-util.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
squeezy-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
