[package]
name = "squeezy-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
futures-util.workspace = true
globset.workspace = true
ignore.workspace = true
libc.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
squeezy-core.workspace = true
squeezy-graph.workspace = true
squeezy-hooks.workspace = true
squeezy-mcp.workspace = true
squeezy-rank.workspace = true
squeezy-skills.workspace = true
squeezy-store.workspace = true
squeezy-telemetry.workspace = true
squeezy-vcs.workspace = true
squeezy-workspace.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
unicode-normalization.workspace = true
which.workspace = true

[dev-dependencies]
squeezy-parse.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
squeezy-win-sandbox.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
