[package]
name = "squeezy-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
ansi-to-tui.workspace = true
crossterm.workspace = true
ignore.workspace = true
lru.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
squeezy-agent.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
squeezy-rank.workspace = true
squeezy-store.workspace = true
squeezy-telemetry.workspace = true
squeezy-tools.workspace = true
squeezy-vcs.workspace = true
supports-color.workspace = true
toml_edit.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-go.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-html.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-sequel.workspace = true
tree-sitter-toml-updated.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-yaml.workspace = true

[dev-dependencies]
futures-util.workspace = true
