[package]
name = "squeezy-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
# Off by default. Exposes `pub mod testing` with a `TuiHarness` that
# drives the full TuiApp + Agent + ratatui pipeline against a
# `TestBackend`. Consumed by `squeezy-eval` so scenarios can send key
# events at a real `handle_key`. Release TUI binaries don't enable it,
# so the test surface stays out of the shipped library.
testing = []
# Heavy terminal-emulator matrix (the `termsim` module). Implies
# `testing` because the scenario driver reuses `TuiHarness`. Off by
# default, so the release library and the default
# `cargo test -p squeezy-tui` never compile vt100/alacritty/insta nor
# the `termsim` tree. Only `--features term-matrix` pulls them in.
term-matrix = ["testing", "dep:vt100", "dep:alacritty_terminal", "dep:insta", "dep:futures-util"]

[dependencies]
ansi-to-tui.workspace = true
crossterm.workspace = true
ignore.workspace = true
lru.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
squeezy-agent.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
squeezy-skills.workspace = true
squeezy-store.workspace = true
squeezy-telemetry.workspace = true
squeezy-tools.workspace = true
squeezy-vcs.workspace = true
supports-color.workspace = true
toml_edit.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
unicode-width.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-go.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-html.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-sequel.workspace = true
tree-sitter-toml-updated.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-yaml.workspace = true

# Optional, gated behind the `term-matrix` feature. See `[features]`.
vt100 = { workspace = true, optional = true }
alacritty_terminal = { workspace = true, optional = true }
insta = { workspace = true, optional = true }
# Needed by the `termsim` scenario driver's stub `LlmProvider` (an empty
# stream). Also a dev-dependency for the crate's other tests; the optional
# entry makes it available in the non-test lib build under `term-matrix`.
futures-util = { workspace = true, optional = true }

[dev-dependencies]
futures-util.workspace = true
